# gdx

./: .gitignore  README.Rmd  README.md  environment.yml  pyproject.toml  scratch.py  setup.py
docs/: NEWS.md  scratch.py  scratch2.py
gdx/: __init__.py  gdx.py
