[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[project]
name = "gdx"
version = "0.0.5"
description = "xarray extension for GDAL"
maintainers = [
    {name = "gdx Contributors"},
]
keywords = [
    "GDAL",
    "xarray",
    "osgeo"
]
readme = "README.rst"
license = {text = "Apache"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "packaging",
    "affine",
    "rasterix",
    "xarray>=2025.6",
  #  "GDAL>=3.10.0",
]


#[project.entry-points."xarray.backends"]
#gdal = "gdx.gdx:GDALBackendEntrypoint"
